virtual-service/xxii-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
spec:
  selector: 
    server: tomcat
  ports: 
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
spec:
  selector:
    server: httpd
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spce:
  selector:
    app: web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
