virtual-service/xxii-vs-with-condition.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-svc-vs
spec:
  hosts:
  - web-svc
  gateways:
    - web-gateway
  http:
  - match:
    # - headers:
    #     end-user:
    #       exact: xxii
    - uri:
        prefix: "/tomcat"
    route:
    - destination:
        host: tomcat-svc
  - match:
    - uri:
        prefix: "/httpd"
    route:
    - destination:
        host: httpd-svc
  # - route:
  #   - destination:
  #       host: httpd-svc
