virtual-service/xxii-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-svc-vs
spec:
  hosts:
    # - web-svc.default.svc.cluster.local
    - web-svc
  http:
    - route:
      - destination:
          host: tomcat-svc
        weight: 20
      - destination:
          host: httpd-svc
        weight: 80
